Added new on click functions

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
       <div class="screen">
         <div class="display">This is the main screen</div>
         <div class="valueButtons1">
-          <button class="row1">100</button>
-          <button class="row1">200</button>
-          <button class="row1">500</button>
+          <button class="row1" onclick="changeValue(100)">100</button>
+          <button class="row1" onclick="changeValue(200)">200</button>
+          <button class="row1" onclick="changeValue(500)">500</button>
         </div>
         <div class="valueButtons2">
-          <button class="row2">100</button>
-          <button class="row2">200</button>
-          <button class="row2">500</button>
+          <button class="row2" onclick="changeValue(700)">700</button>
+          <button class="row2" onclick="changeValue(800)">800</button>
+          <button class="row2" onclick="changeValue(1000)">1000</button>
         </div>
       </div>
       <div class="rightButtons">
